--- a/CHDReaderTest/Properties/launchSettings.json
+++ b/CHDReaderTest/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "CHDReaderTest": {
       "commandName": "Project",
-      "commandLineArgs": "\"\\\\10.0.4.11\\d$\\RomVaultCHD\\RomRoot\\MAME - CHDs\""
+      "commandLineArgs": "\"\\\\10.0.4.11\\d$\\RomVaultCHD\\RomRoot\\MAME - CHDs\\MAME CHDs (merged)\""
     }
   }
 }
